--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
             <ul class="navbar">
                 <li>
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html">safdar</a>
                     <a href="./index.html#locations">Locations</a>
                     <a href="./index.html#package">Packages</a>
                     <a href="./about.html">About Us</a>
